US story 6 complete. Contestant hometowns added to view

--- a/app/views/contestants/index.html.erb
+++ b/app/views/contestants/index.html.erb
@@ -7,3 +7,5 @@
     <p>Name: <%= c.hometown %></p>
   </div>
 <% end %>
+
+<p>"These Contestants are from these hometowns: <%=@bachelorette.contestant_hometowns.join(", ")%><p>
